# audio-dial

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: dial.rs  main.rs  serialisable.rs
lib/: Cargo.toml  message.proto
lib/src/: computer_state.rs  data.rs  lib.rs
service/: Cargo.toml
service/src/: application_audio.rs  config.rs  main.rs
