[package]
name = "audio-dial"
version = "0.1.0"
authors = ["Keith <hnefatl@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "audio-dial"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
fixed = "2.0.0-alpha.11"
void = { version = "1.0.2", default-features = false }

# Custom fork of bytes to include the work on integrating portable-atomics.
bytes = { version = "1.5.0", default-features = false, features = [
    "extra-platforms",
] }

# The atmega328p doesn't support atomic CAS or atomics on values larger than u8.
# But it is a single-threaded system, so we don't really need atomics since we can
# just disable interrupts.
portable-atomic = { version = "1.4.3", features = [
    "unsafe-assume-single-core",
] }
prost = { version = "0.12.1", default-features = false, features = [
    "prost-derive",
] }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-nano"]
