[package]
name = "audio-dial"
version = "0.1.0"
authors = ["Keith <hnefatl@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "audio-dial"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
fixed = "2.0.0-alpha.11"
void = { version = "1.0.2", default-features = false }
binary_serde = "1"
az = "1"
thiserror-no-std = "2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-nano"]
