[package]
name = "audio-dial-service"
version = "0.0.0"
authors = ["Keith <hnefatl@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "audio-dial-service"
path = "src/main.rs"

[dependencies]
lib = { path = "../lib" }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
serde_arrays = "0.1"
thiserror = "1.0"
serialport = "4.2"
windows = { version = "0.51", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Variant",
] }
